libtextstyle: Use gnulib module 'term-style-control'.
* gnulib-local/lib/term-ostream.oo.h: Include term-style-control.h.
(ttyctl_t): Remove type.
* gnulib-local/lib/term-ostream.oo.c (DEBUG_SIGNALS): Remove macro.
Don't include <signal.h>, <stdio.h>, <sys/stat.h>, fatal-signal.h,
sig-handler.h, same-inode.h.
(SIZEOF): Remove macro.
(nonintr_tcgetattr, nonintr_tcsetattr): Remove functions.
(log_message, sprintf_integer, simple_errno_string, simple_signal_string,
log_signal_handler_called): Remove functions.
(struct term_ostream): Remove fields tty_control, same_as_stderr,
non_default_active. Add control_data field instead.
(get_control_data): New function.
(BLOCK_SIGNALS_DURING_NON_DEFAULT_STYLE_OUTPUT): Remove macro.
(term_fd): Remove variable.
(pgrp_status_t): Remove type.
(pgrp_status): Remove variable.
(update_pgrp_status): Remove function.
(out_filename): Remove variable.
(out_error): Use out_stream instead of out_filename.
(restore, tcsetattr_failed): Remove functions.
(orig_lflag_set, orig_lflag): Remove variables.
(clobber_local_mode, restore_local_mode): Remove functions.
(job_control_signals): Remove variable.
(num_job_control_signals): Remove macro.
(relevant_signal_set, relevant_signal_set_initialized): Remove variables.
(init_relevant_signal_set, block_relevant_signals, unblock_relevant_signals,
is_ignored, show_signal_marker, fatal_or_stopping_signal_handler,
fatal_signal_handler, stopping_signal_handler, continuing_signal_handler,
ensure_continuing_signal_handler, ensure_other_signal_handlers): Remove
functions.
(out_attr_change): Set out_stream and out_fd.
(activate_non_default_attr, deactivate_non_default_attr): Remove functions.
(restore, async_restore, async_set_attributes_from_default): New functions.
(controller): New variable.
(activate_default_attr, output_buffer): Update.
(term_ostream::free): Invoke deactivate_term_style_controller.
(term_ostream_create): Invoke activate_term_style_controller.
* gnulib-local/m4/term-ostream.m4 (gl_TERM_OSTRE

--- a/libtextstyle/.gitignore
+++ b/libtextstyle/.gitignore
@@ -151,6 +151,8 @@
 /lib/sys_types.in.h
 /lib/term-ostream.oo.c
 /lib/term-ostream.oo.h
+/lib/term-style-control.c
+/lib/term-style-control.h
 /lib/term-styled-ostream.oo.c
 /lib/term-styled-ostream.oo.h
 /lib/terminfo.h
