build: Move the Emacs package sources to subdirectory gettext-tools/emacs/.
* gettext-tools/emacs/*.el: Moved here from gettext-tools/misc/.
* gettext-tools/emacs/Makefile.am: New file, based on
gettext-tools/misc/Makefile.am.
* gettext-tools/misc/Makefile.am (lisp_LISP): Remove variable.
* gettext-tools/configure.ac (AC_CONFIG_FILES): Add emacs/Makefile.
* gettext-tools/Makefile.am (SUBDIRS): Add 'emacs'.

--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -1,5 +1,5 @@
 dnl Configuration for the gettext-tools directory of GNU gettext
-dnl Copyright (C) 1995-2018 Free Software Foundation, Inc.
+dnl Copyright (C) 1995-2019 Free Software Foundation, Inc.
 dnl
 dnl This program is free software: you can redistribute it and/or modify
 dnl it under the terms of the GNU General Public License as published by
@@ -530,6 +530,8 @@ AC_CONFIG_FILES([po/Makefile.in])
 AC_CONFIG_FILES([projects/Makefile])
 
 AC_CONFIG_FILES([styles/Makefile])
+
+AC_CONFIG_FILES([emacs/Makefile])
 
 AC_CONFIG_FILES([misc/Makefile])
 AC_CONFIG_FILES([misc/gettextize], [chmod a+x misc/gettextize])
