libtextstyle: Generalize fd-styled-ostream to noop-styled-ostream.
* gnulib-local/lib/noop-styled-ostream.oo.h: New file, based on
gnulib-local/lib/fd-styled-ostream.oo.h.
* gnulib-local/lib/noop-styled-ostream.oo.c: New file, based on
gnulib-local/lib/fd-styled-ostream.oo.c.
* gnulib-local/modules/noop-styled-ostream: New file, based on
gnulib-local/modules/fd-styled-ostream.
* gnulib-local/Makefile.am (EXTRA_DIST): Remove lib/fd-styled-ostream.oo.[hc]
and modules/fd-styled-ostream. Add lib/noop-styled-ostream.oo.[hc] and
modules/noop-styled-ostream.
* libtextstyle/woe32dll/c++noop-styled-ostream.cc: New file, based on
libtextstyle/woe32dll/c++fd-styled-ostream.cc.
* libtextstyle/gnulib-local/modules/noop-styled-ostream.diff: New file, based
on libtextstyle/gnulib-local/modules/fd-styled-ostream.diff.
* gnulib-local/lib/fd-styled-ostream.oo.h: Remove file.
* gnulib-local/lib/fd-styled-ostream.oo.c: Remove file.
* gnulib-local/modules/fd-styled-ostream: Remove file.
* libtextstyle/woe32dll/c++fd-styled-ostream.cc: Remove file.
* libtextstyle/gnulib-local/modules/fd-styled-ostream.diff: Remove file.
* libtextstyle/autogen.sh (GNULIB_MODULES): Add noop-styled-ostream. Remove
fd-styled-ostream.
* libtextstyle/lib/misc.c: Include noop-styled-ostream.h, fd-ostream.h.
(styled_ostream_create): Call fd_ostream_create and noop_styled_ostream_create
instead of fd_styled_ostream_create.
* libtextstyle/lib/textstyle.h (noop_styled_ostream_t): New type.
(noop_styled_ostream_*): New declarations.
* libtextstyle/doc/libtextstyle.texi (The noop_styled_ostream class): New
subsection.

--- a/libtextstyle/.gitignore
+++ b/libtextstyle/.gitignore
@@ -49,8 +49,6 @@
 /lib/fd-hook.h
 /lib/fd-ostream.oo.c
 /lib/fd-ostream.oo.h
-/lib/fd-styled-ostream.oo.c
-/lib/fd-styled-ostream.oo.h
 /lib/file-ostream.oo.c
 /lib/file-ostream.oo.h
 /lib/filename.h
@@ -108,6 +106,8 @@
 /lib/msvc-inval.h
 /lib/msvc-nothrow.c
 /lib/msvc-nothrow.h
+/lib/noop-styled-ostream.oo.c
+/lib/noop-styled-ostream.oo.h
 /lib/obstack.c
 /lib/obstack.h
 /lib/ostream.oo.c
@@ -233,12 +233,8 @@
 /lib/libtextstyle.sym.in
 /lib/fd-ostream.c
 /lib/fd-ostream.h
-/lib/fd-styled-ostream.c
-/lib/fd-styled-ostream.h
 /lib/fd_ostream.priv.h
 /lib/fd_ostream.vt.h
-/lib/fd_styled_ostream.priv.h
-/lib/fd_styled_ostream.vt.h
 /lib/file-ostream.c
 /lib/file-ostream.h
 /lib/file_ostream.priv.h
@@ -259,6 +255,10 @@
 /lib/memory-ostream.h
 /lib/memory_ostream.priv.h
 /lib/memory_ostream.vt.h
+/lib/noop-styled-ostream.c
+/lib/noop-styled-ostream.h
+/lib/noop_styled_ostream.priv.h
+/lib/noop_styled_ostream.vt.h
 /lib/ostream.c
 /lib/ostream.h
 /lib/ostream.priv.h
