libgettextpo: Use a dummy replacement for libtextstyle.
* gnulib-local/modules/libtextstyle-dummy: New file, based on gnulib's
modules/libtextstyle-optional.
* gnulib-local/Makefile.am (EXTRA_DIST): Add it.
* autogen.sh (GNULIB_MODULES_LIBGETTEXTPO): Add libtextstyle-dummy. Remove
file-ostream, ostream.
* gettext-tools/src/write-catalog.h: Include <textstyle.h> always.
* gettext-tools/src/write-catalog.c: Likewise.
* gettext-tools/src/write-po.h: Likewise.
* gettext-tools/src/write-po.c: Likewise.

--- a/gnulib-local/Makefile.am
+++ b/gnulib-local/Makefile.am
@@ -281,6 +281,7 @@ modules/iconv-ostream \
 modules/java \
 modules/libcroco \
 modules/libglib \
+modules/libtextstyle-dummy \
 modules/libxml \
 modules/markup \
 modules/memory-ostream \
