--- a/gettext-runtime/Makefile.am
+++ b/gettext-runtime/Makefile.am
@@ -1,5 +1,5 @@
 ## Makefile for the gettext-runtime directory of GNU gettext
-## Copyright (C) 1995-2006, 2010, 2012-2016, 2018 Free Software Foundation,
+## Copyright (C) 1995-2006, 2010, 2012-2016, 2018-2019 Free Software Foundation,
 ## Inc.
 ##
 ## This program is free software: you can redistribute it and/or modify
@@ -20,8 +20,6 @@
 AUTOMAKE_OPTIONS = 1.5 gnu no-dependencies
 ACLOCAL_AMFLAGS = -I m4 -I ../m4 -I gnulib-m4
 
-MAKEINFO = env LANG= LC_MESSAGES= LC_ALL= LANGUAGE= @MAKEINFO@
-
 # The list of subdirectories depends on whether --disable-libasprintf was
 # specified.
 if ENABLE_LIBASPRINTF
@@ -38,15 +36,6 @@ EXTRA_DIST = BUGS
 
 gettextsrcdir = $(datadir)/gettext
 gettextsrc_DATA = ABOUT-NLS
-
-
-all-local: ABOUT-NLS
-
-ABOUT-NLS: $(srcdir)/doc/nls.texi $(srcdir)/doc/matrix.texi
-	rm -f $(srcdir)/ABOUT-NLS \
-	  && $(MAKEINFO) --plaintext --no-validate -I $(srcdir)/doc \
-	     $(srcdir)/doc/nls.texi \
-	     | sed -e "s/\`\([^']*\)'/‘\1’/g" > $(srcdir)/ABOUT-NLS
 
 
 # Allow users to use "gnulib-tool --update".
