libasprintf: Use a version of texi2html which is under a good license.
Reported by <ineiev@gnu.org> in <https://savannah.gnu.org/bugs/?54809>.

* gettext-runtime/libasprintf/texi2html: Copied from texi2html-1.78, with
changes made in libunistring/build-aux/texi2html and then in
libtextstyle/build-aux/texi2html.
* gettext-runtime/libasprintf/fdl.texi: New file, copied from
gettext-tools/doc/fdl.texi.
* gettext-runtime/libasprintf/gpl.texi: New file, copied from
gnulib/doc/gpl-2.0.texi.
* gettext-runtime/libasprintf/lgpl.texi: New file, copied from
gnulib/doc/lgpl-2.1.texi.
* gettext-runtime/libasprintf/autosprintf.texi: Invoke @contents. Enable the
Top node during texi2html processing.
(Licenses): New appendix.
* gettext-runtime/libasprintf/Makefile.am (TEXINCLUDES): New variable.
(MAKEINFOFLAGS): Use it.
(autosprintf_TEXINFOS): New variable.
(autosprintf_all.html): Depend on it. Use texi2html options -no-sec-nav -no-menu
-toc-links.

--- a/gettext-runtime/libasprintf/Makefile.am
+++ b/gettext-runtime/libasprintf/Makefile.am
@@ -114,10 +114,18 @@ clean-local:
 
 # Documentation.
 
+# List of -I options referring to directories that contain texinfo sources
+# used by this directory.
+# Should contain at least one -I option, to work around a bug in texi2dvi 1.13,
+# see <https://lists.gnu.org/archive/html/bug-automake/2009-04/msg00029.html>.
+TEXINCLUDES = -I .
+
 MAKEINFO = env LANG= LC_MESSAGES= LC_ALL= LANGUAGE= @MAKEINFO@
-MAKEINFOFLAGS = --no-split
+MAKEINFOFLAGS = $(TEXINCLUDES) --no-split
 
 info_TEXINFOS = autosprintf.texi
+# List of texinfo sources @included by autosprintf.texi.
+autosprintf_TEXINFOS = lgpl.texi gpl.texi fdl.texi
 
 # We distribute only the HTML documentation.
 # The user can generate the others, via
@@ -185,8 +193,8 @@ html-local: $(HTMLS)
 
 # Override of automake's definition.
 # We want to use texi2html, not makeinfo --html.
-autosprintf_all.html: autosprintf.texi
-	$(TEXI2HTML) -number -monolithic `if test -f autosprintf.texi; then echo autosprintf.texi; else echo $(srcdir)/autosprintf.texi; fi`
+autosprintf_all.html: autosprintf.texi $(autosprintf_TEXINFOS)
+	$(TEXI2HTML) $(TEXINCLUDES) -no-sec-nav -no-menu -toc-links -number -monolithic $(srcdir)/autosprintf.texi
 	mv autosprintf.html autosprintf_all.html
 
 # The install-html target is already defined by automake.
