--- a/gettext-tools/misc/convert-archive.in
+++ b/gettext-tools/misc/convert-archive.in
@@ -1,6 +1,6 @@
 #! /bin/sh
 #
-# Copyright (C) 2009-2010, 2014, 2018 Free Software Foundation, Inc.
+# Copyright (C) 2009-2010, 2014, 2018-2019 Free Software Foundation, Inc.
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -208,23 +208,27 @@ ba
 
     mkdir "$work_dir/master" || func_fatal_error "mkdir failed"
     gzip -d -c < "$fromfile" | (cd "$work_dir/master" && tar xf -)
-    cd "$work_dir"
-    tags=`cd master && git tag`
-    test -n "$tags" || func_fatal_error "no release tags found"
-    for tag in $tags; do
-      if test $tag != empty; then
-        version=$tag
-        (cd master && git checkout -q $tag) \
-          || func_fatal_error "git checkout failed"
-        rm -f master/.gitignore
-        mv master/.git .git
-        mkdir "$unpacked/$version" || func_fatal_error "mkdir failed"
-        (cd master && tar cf - .) | (cd "$unpacked/$version" && tar xf -) \
-          || func_fatal_error "file copy failed"
-        mv .git master/.git
-      fi
-    done
-    cd ..
+    (unset GIT_CONFIG
+     unset XDG_CONFIG_HOME
+     unset HOME
+     GIT_CONFIG_NOSYSTEM=1; export GIT_CONFIG_NOSYSTEM
+     cd "$work_dir"
+     tags=`cd master && git tag`
+     test -n "$tags" || func_fatal_error "no release tags found"
+     for tag in $tags; do
+       if test $tag != empty; then
+         version=$tag
+         (cd master && git checkout -q $tag) \
+           || func_fatal_error "git checkout failed"
+         rm -f master/.gitignore
+         mv master/.git .git
+         mkdir "$unpacked/$version" || func_fatal_error "mkdir failed"
+         (cd master && tar cf - .) | (cd "$unpacked/$version" && tar xf -) \
+           || func_fatal_error "file copy failed"
+         mv .git master/.git
+       fi
+     done
+    )
     rm -rf "$work_dir"
     ;;
 esac
@@ -320,6 +324,9 @@ case "$to" in
     git_dir=`pwd`/tmpgit$$
     mkdir "$git_dir" || func_fatal_error "mkdir failed"
     unset GIT_CONFIG
+    unset XDG_CONFIG_HOME
+    unset HOME
+    GIT_CONFIG_NOSYSTEM=1; export GIT_CONFIG_NOSYSTEM
     (cd "$git_dir" && {
       git init -q
       git config user.name 'GNU Gettext Build'
