build: Fix build failure on mingw.
For some reason, Automake puts a definition of CXXLD in
gettext-tools/src/Makefile.in but not in
gettext-tools/gnulib-lib/Makefile.in.

* gettext-tools/gnulib-lib/Makefile.am (CXXLD): Define.

--- a/gettext-tools/gnulib-lib/Makefile.am
+++ b/gettext-tools/gnulib-lib/Makefile.am
@@ -83,5 +83,7 @@ libgettextlib_la_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CXX \
 	$(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=link \
 	$(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(libgettextlib_la_LDFLAGS) $(LDFLAGS) \
 	-o $@
+# Use the same definition of CXXLD as Automake generates in other Makefiles.
+CXXLD = $(CXX)
 endif
 
