build: Don't link libgettextlib and libgettextsrc against libgomp.
* autogen.sh (GNULIB_MODULES_TOOLS_FOR_SRC): Add openmp-init. Remove openmp.
* gettext-tools/configure.ac: Invoke AC_OPENMP.

--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -154,6 +154,9 @@ if test "$MSGMERGE_LIBM" = "?"; then
 fi
 AC_SUBST([MSGMERGE_LIBM])
 
+dnl Test whether msgmerge can make use of OpenMP.
+AC_OPENMP
+
 dnl Checks for header files, functions and declarations.
 gl_INIT
 grgl_INIT
